# makinon

./: CMakeLists.txt  Certdelete.js  Developertablerendering.js  FINALLYBRO.js  Info.plist  IpasignButton.js  LICENSE  Loadcerts.js  Multispp.js  Package.swift  README.html  README.md  Rendercertpanel.js  Yeah  build.swift  flekstore.js  iOS-lib.js  index.html  ipa_signer.py  layout.js  layoutswi.js  package.js  package.json  results.js  selectipa.js  server.js  sidestoreren.js
*/: project.yml
.github/actions/xcode-agent/: action.yml
.github/agents/: README.md  agent-01.yaml  agents.json  code-fixer.yml  code-generator.yml  codefix.sh
.github/workflows/: ahh-pages.yaml  auto-fix.yml  build-makinon-ios.yml  cachingbuild.yml  fix-and-build.yml  fix.yaml  github_workflows_build-ipa.yml  ios.yml  makinon-ios.yml
App/: AppDelegate.swift  Config.xcconfig  ContentView.swift  Info.plist  Makinon.entitlements  MakinonApp.swift  RootViewController.swift
App/Assets.xcassets/AppIcon.appiconset/: Contents.json  project.yml
App/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
Sources/: Main.swift
Sources/IPASigner/: ContentView.swift  IPASignerApp.swift
Sources/IPASigner/Models/: IPAFile.swift  SigningConfig.swift
Sources/IPASigner/Services/: CertificateManager.swift  IPASigningService.swift
Sources/IPASigner/Utilities/: FileHandler.swift
Sources/IPASigner/Views/: SettingsView.swift  SigningView.swift
agents/: code_analyzer.py  code_generator.py  xcode_fixer.sh
server/: README.md  app.py  config.py  requirements.txt
server/data/: certs.json
